--- a/angular-academy/src/index.html
+++ b/angular-academy/src/index.html
@@ -18,7 +18,7 @@
 
     body{
         margin: 0;
-        font-family: Source Sans Pro,sans-serif;
+        font-family: Source Sans Pro,sans-serif !important;
         /* font-size: 1.6rem !important; */
     }
 
@@ -35,9 +35,9 @@
       display: inline-block;
       position: relative;
       padding: 6px 16px;
-      font-size: 1rem !important;
+      font-size: 1.1rem !important;
       color: #da3b00;
-      margin-bottom: 20px;
+      /* margin-bottom: 20px; */
   }
 
   .page-title .title:after, .page-title .title:before {
@@ -61,10 +61,12 @@
   }
   
   .subtitle{
-        margin: 0;
-        font-size: 58px !important;
-        line-height: 65px !important;
         font-weight: 700 !important;
+        margin: 0 !important;
+        font-family: Source Sans Pro,sans-serif !important;
+        font-size: 3.7rem !important;
+        line-height: 65px !important;
+        
     }
   </style>
 
